# digital_logic

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  DESIGN.md  README.md  SCALE_BREAKING_POINTS.md  SPEC.md  SYSTEM.md  fix_drawing_final.py  scratch.rs
.cargo/: config.toml
.github/workflows/: android-test.yml  android.yml  release.yml  windows.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/quad_native/: QuadNative.java
android/app/src/main/java/rust/logic_simulator/: MainActivity.java
desktop/: Cargo.toml
desktop/src/: main.rs
src/: editor.rs  engine.rs  lib.rs  main.rs
src/editor/: canvas.rs  circuit_model.rs  color_coding.rs  constants.rs  drawing.rs  drawing_shapes.rs  drawing_wires.rs  global_library.rs  gui.rs  history.rs  input.rs  input_context_menu.rs  input_delete.rs  input_down.rs  input_hover.rs  input_interactions.rs  input_keyboard.rs  input_navigation.rs  input_press.rs  input_release.rs  input_simulation.rs  inspection.rs  inspection_logic.rs  inspection_ui.rs  layout.rs  mod.rs  persistence.rs  spatial_hash.rs  state.rs  stress_test.rs  svg_exporter.rs  tests.rs  theme.rs  types.rs  ui_catalog.rs  ui_global_library.rs  ui_main_menu.rs  ui_properties.rs  wire_junctions.rs
src/engine/: compiler.rs  mod.rs  profiler.rs  simulator.rs  tests.rs  types.rs
