[package]
name = "logic_simulator"
version = "0.1.0-alpha.1"
edition = "2024"
autobins = false

[package.metadata.android]
label = "Digital Logic Sim"

[package.metadata.android.sdk]
target_sdk_version = 33
min_sdk_version = 21

[package.metadata.android.signing.release]
path = "release.keystore"
keystore_password = "android"
key_alias = "release-key"
key_password = "android"

[dependencies]
macroquad = "0.4"
egui = "0.31"
egui-macroquad = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3", "async-std"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"