[package]
name = "logic_simulator"
version = "1.0.0-alpha.5"
edition = "2024"


[lib]
name = "logic_simulator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
macroquad = "0.4"
egui = "0.31"
egui-macroquad = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3", "async-std"] }

