[package]
name = "logic_simulator"
version = "3.2.1"
edition = "2024"


[lib]
name = "logic_simulator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "logic_simulator_bin"
path = "src/main.rs"


[dependencies]
macroquad = "0.4"
egui = "0.31"
egui-macroquad = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4.9"
rayon = "1.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = { version = "0.15", default-features = false, features = ["gtk3", "async-std"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk-context = "0.1.1"
jni = "0.21.1"
miniquad = "0.4.10"

[build-dependencies]
winres = "0.1.12"
