[package]
name = "desktop"
version = "0.1.0-alpha.1"
edition = "2024"

[[bin]]
name = "logic_simulator"
path = "src/main.rs"

[dependencies]
logic_simulator = { path = ".." }
macroquad = "0.4"
egui = "0.31"
egui-macroquad = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.15"
